style: avoid large spacing below publications overview

--- a/src/styles/mixins/_mixins-layout.scss
+++ b/src/styles/mixins/_mixins-layout.scss
@@ -46,6 +46,10 @@
       overflow-clip-margin: 0.25rem;
     }
 
+    .additionalStickyContent {
+      grid-row: 1;
+    }
+
     // Vertically center the first line of the
     // headings next to each other
     h3:nth-child(2) {
